@@ -229,6 +229,16 @@ this repository contains the full copyright notices and license terms. -->
             <field name="module">ir</field>
             <field name="fuzzy" eval="False"/>
         </record>
+        <record model="ir.translation"
+            id="translation_selection_value_notfound">
+            <field name="name">selection_value_notfound</field>
+            <field name="lang">en_US</field>
+            <field name="type">error</field>
+            <field name="src">Value not in the selection for field "%s".</field>
+            <field name="value">Value not in the selection for field "%s".</field>
+            <field name="module">ir</field>
+            <field name="fuzzy" eval="False"/>
+        </record>
 
         <record model="ir.ui.view" id="translation_set_report_start_view_form">
             <field name="model">ir.translation.set_report.start</field>
